# BSP-isobenefit-qgis-plugin

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  website.yml
core/: .gitignore  Cargo.toml  README.md  pyproject.toml
core/examples/: bench.rs
core/python/isobenefit/: __init__.py
core/python/isobenefit_core/: __init__.py
core/src/: access.rs  density.rs  lib.rs  neighbours.rs  py_bindings.rs  sim.rs
core/tests_py/: test_core.py
demo_layers/: cambourne.qgz  centres.geojson  green.geojson  unbuildable.geojson  urban.geojson
deprecated/: land_map_vector.py  mesh.py  raster.py
docs/: backlog.md  prose-review.md  recommended-plan.md
futurb/: __init__.py  futurb.py  futurb_dialog.py  futurb_dialog_base.ui  mesh.py  metadata.txt  pb_tool.cfg  raster.py  rc_resources.py  readme.txt  resources.py  resources.qrc  results.html  ui_futurb_dialog_base.py
futurb/dialog/: futurb.py  futurb_dialog.py
futurb/isobenefit/: algos.py  image_io.py  initialization_utils.py  land_map.py  land_map_local.py  land_map_vector_backup.py  logger.py  simulation.py
futurb/plugin/: futurb.py  futurb_dialog.py  mesh.py  resources.py
isobenefit/: __init__.py  bootstrap.py  futurb.py  futurb_dialog.py  gis_io.py  isobenefit_dialog.py  land_map.py  land_map_local.py  metadata.txt  resources_rc.py  sim_runner.py  simulation.py
isobenefit_qgis/: __init__.py  bootstrap.py  futurb.py  gis_io.py  grid.py  isobenefit_dialog.py  metadata.txt  osm_dialog.py  osm_fetcher.py  osm_queries.py  params_io.py  resources.qrc  routing.py  sim_runner.py  validation.py
scenarios/: README.md
scenarios/cambourne/: built.geojson  cambourne.qgz  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/cape_town_blue_downs/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  stations.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/celina_tx/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/dnipro/: built.geojson  centralities.csv  centralities.geojson  centres.geojson  extents.geojson  extents_A.geojson  extents_B.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  params_B.json  railways.geojson  stations.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/freiburg_rieselfeld/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  stations.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/kigali_east/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/london_crews_hill/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  stations.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scenarios/medellin_pajarito/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  osm_download_extent.geojson  params.json  railways.geojson  stations.geojson  steep.geojson  stops.geojson  streets.geojson  unbuildable.geojson
scripts/: benchmark_plans.py  demo_bench.py  fetch_scenario.py  make_icon.py  prose_lint.py  render_scenario_gallery.py  verify.py  verify.sh  visual_audit.py
test/: dev.py
tests/: test_dev.py  test_osm.py  test_params_io.py  test_pipeline.py
tests/staging/: algos.py  land_map.py  land_map_local.py  logger.py
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
website/public/gallery/: gallery.json
website/public/gallery/cambourne/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk1600_params.json  walk400_params.json  walk800_params.json
website/public/gallery/celina_tx/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk1600_params.json  walk400_params.json  walk800_params.json
website/public/gallery/dnipro/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk1600_params.json  walk400_params.json  walk800_params.json
website/public/gallery/dnipro_A/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk800_params.json
website/public/gallery/dnipro_B/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk800_params.json
website/public/gallery/freiburg_rieselfeld/: baseline_params.json  denser_params.json  dispersed_params.json  moderate_params.json  tight_params.json  walk1600_params.json  walk400_params.json  walk800_params.json
website/public/gallery/kigali_east/: baseline_params.json  compact_params.json  denser_params.json  dispersed_params.json  tight_params.json  walk1600_params.json  walk400_params.json  walk800_params.json
website/public/gallery/london_crews_hill/: baseline_params.json  denser_params.json  dispersed_params.json  (+5 more)
website/scripts/: demonstrators.py  diagrams.py  fetch_data.py
website/scripts/data/: built.geojson  centres.geojson  extents.geojson  green.geojson  industrial.geojson  stations.geojson  stops.geojson  streets.geojson  unbuildable.geojson
website/src/layouts/: BaseLayout.astro
website/src/pages/: _scenario_notes.md  index.astro  plugin.md  scenarios.astro  scenarios.md  theory.md
website/src/styles/: tailwind.css
(+8 files in other folders)
