[project]
name = "isobenefit-qgis-plugin"
version = "0.8.0"
description = "QGIS plugin for Isobenefit Urbanism simulation (thin wrapper over the isobenefit engine)."
authors = [{ name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github-pages.ucl.ac.uk/BSP-isobenefit-urbanism/"
repository = "https://github.com/UCL/BSP-isobenefit-qgis-plugin"

# This repo is not itself a Python package — QGIS loads the `isobenefit_qgis/`
# folder, and the engine ships separately as the `isobenefit` wheel (in `core/`).
# So we only manage dev tooling here, via uv.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.46",
    "pytest>=8",
    "numpy>=1.24",
    "shapely>=2",
    "isobenefit",          # built from core/ so `pytest tests` can import the engine
]

[tool.uv.sources]
isobenefit = { path = "core" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E), import sorting (I) — replaces black/isort/pylint
select = ["E", "F", "I"]
